<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/img_startbg"
    tools:context=".HomeActivity" >

    <!-- Welcome message -->

   <!--  <TextView
        android:id="@+id/home_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textStyle="bold" 
        android:textSize="@dimen/home_text_size"
        android:textColor="@color/Aqua"/> -->
        
        <ImageView 
            android:id="@+id/home_text"
            android:layout_marginTop="@dimen/logo_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_starttext"
            android:contentDescription="@string/start_logo"
            android:layout_centerHorizontal="true"/>
        
        <RelativeLayout 
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/logo_top_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/home_text"
    tools:context=".HomeActivity">
    
    <!-- Pick a category -->
    <Spinner 
        android:id="@+id/category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="left"/>
    
    <!-- Volunteering buttons -->
    <Button
        android:id="@+id/button_volunteer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_volunteer_margins"
        android:layout_marginLeft="@dimen/horizonatal_volunteer_margins"
        android:layout_marginRight="@dimen/horizonatal_volunteer_margins"
        android:text="@string/button_volunteering_locations"
        android:textSize="@dimen/volunteer_button_textSize"
        android:onClick="displayVolOpportunities"
        android:background="@color/DarkCyan"
        android:layout_below="@id/category_spinner"/>
    
    <Button
        android:id="@+id/button_volunteer_setLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_volunteer_margins"
        android:layout_marginLeft="@dimen/horizonatal_volunteer_margins"
        android:layout_marginRight="@dimen/horizonatal_volunteer_margins"
        android:text="@string/button_volunteering_setlocation"
        android:textSize="@dimen/volunteer_button_textSize"
        android:onClick="changeUserLocation"
        android:background="@color/DarkCyan"
        android:layout_below="@id/button_volunteer"/>
    
    </RelativeLayout>

   
	
</RelativeLayout>
